fix overflow

--- a/style.css
+++ b/style.css
@@ -102,12 +102,8 @@
   font-size: 16px;
 }
 
-.technologies-section {
-  color: #3B3B98;
-}
 .technologies-section .box {
-  transition: all 1s;
-  text-align: center;
+  color: #3B3B98;
 }
 .technologies-section .box-1 {
   grid-column-start: 2;
@@ -194,6 +190,15 @@
     grid-row-gap: 16px;
     font-size: 50px;
   }
+  .technologies-section .box {
+    width: 300px;
+    transition: all 1s;
+    text-align: center;
+    color: transparent;
+    background: linear-gradient(90deg, #f951e8 10%, #1dfff7 80%);
+    background-clip: text;
+    -webkit-background-clip: text;
+  }
   .technologies-section .box-1 {
     grid-column-start: 3;
     grid-row-start: 4;
@@ -216,7 +221,7 @@
   }
   .technologies-section .box-6 {
     grid-column-start: 2;
-    grid-row-start: 7;
+    grid-row-start: 6;
   }
   .technologies-section .box-7 {
     grid-column-start: 2;
@@ -228,7 +233,7 @@
   }
   .technologies-section .box-9 {
     grid-column-start: 6;
-    grid-row-start: 3;
+    grid-row-start: 4;
   }
   .technologies-section .box-10 {
     grid-column-start: 11;
@@ -255,12 +260,12 @@
     grid-row-start: 7;
   }
   .technologies-section .box-16 {
-    grid-column-start: 11;
-    grid-row-start: 4;
+    grid-column-start: 5;
+    grid-row-start: 6;
   }
   .technologies-section .box-17 {
-    grid-column-start: 11;
-    grid-row-start: 6;
+    grid-column-start: 9;
+    grid-row-start: 5;
   }
   .technologies-section .box-18 {
     grid-column-start: 6;
@@ -286,7 +291,7 @@
 }
 .project-tile .img-wrapper {
   border-radius: 10px;
-  padding: 30px 30px 20px 30px;
+  padding: 10px;
   border: 4px solid #fff;
 }
 .project-tile .project-title {
@@ -296,7 +301,7 @@
   margin-top: 15px;
   margin-bottom: 0;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .projects-grid {
@@ -334,7 +339,7 @@
 }
 
 .project-section__title {
-  font-size: 25px;
+  font-size: 20px;
   text-transform: lowercase;
 }
 
@@ -356,9 +361,6 @@
   .project-section__title {
     font-size: 30px;
   }
-  .project-title {
-    font-size: 22px;
-  }
   .project-tile .img-square {
     width: 300px;
     height: 300px;
@@ -374,9 +376,16 @@
     height: 100%;
     object-fit: cover;
   }
+  .project-tile .project-title {
+    font-size: 22px;
+  }
+  .project-tile .img-wrapper {
+    padding: 20px 30px;
+  }
 }
 .about-section {
   color: #fefefe;
+  overflow: hidden;
 }
 
 .about-section__text {
@@ -400,7 +409,6 @@
 }
 .about-section__contact .social-link {
   display: inline-block;
-  margin-right: 20px;
 }
 .about-section__contact a {
   font-size: 1.1rem;
@@ -455,7 +463,6 @@
     justify-content: center;
   }
   .about-section__contact .social-link {
-    margin-left: 20px;
     color: #3B3B98;
   }
 }
@@ -470,7 +477,7 @@ body {
   scroll-behavior: smooth;
   font-size: 16px;
   font-family: "Quantico", sans-serif;
-  background-color: #fefefe;
+  background-color: #3B3B98;
   overflow-x: hidden;
 }
 
@@ -485,7 +492,7 @@ h1, h2, h3, h4 {
 
 .section {
   min-height: 100vh;
-  padding: 80px 30px 100px 30px;
+  padding: 80px 15px 100px 15px;
 }
 
 .main {
@@ -533,6 +540,9 @@ header {
 @media (min-width: 992px) {
   .h1 {
     font-size: 48px;
+  }
+  .section {
+    padding: 80px 30px 100px 30px;
   }
 }
 
