--- a/style/base.scss
+++ b/style/base.scss
@@ -19,7 +19,7 @@ body {
     scroll-behavior: smooth;
     font-size: 16px;
     font-family: $font-robot;
-    background-color: $color-white;
+    background-color: #3B3B98;
     overflow-x: hidden;
 }
 
@@ -34,7 +34,7 @@ h1, h2, h3, h4 {
 
 .section {
     min-height: 100vh;
-    padding: 80px 30px 100px 30px;
+    padding: 80px 15px 100px 15px;
 }
 
 .main {
@@ -82,5 +82,9 @@ header {
 @media (min-width: 992px){
     .h1 {
         font-size: 48px;
+    }
+
+    .section {
+        padding: 80px 30px 100px 30px;
     }
 }
