--- a/style/projects.scss
+++ b/style/projects.scss
@@ -14,7 +14,7 @@
 
     .img-wrapper {
         border-radius: 10px;
-        padding: 30px 30px 20px 30px;
+        padding: 10px;
         border: 4px solid #fff;
     }
 
@@ -25,7 +25,7 @@
        margin-top: 15px;
        margin-bottom: 0;
        font-weight: normal;
-       font-size: 18px;
+       font-size: 16px;
     }
 }
 
@@ -66,7 +66,7 @@
 }
 
 .project-section__title {
-    font-size: 25px;
+    font-size: 20px;
     text-transform: lowercase;
 }
 
@@ -92,10 +92,6 @@
         font-size: 30px;
     }
 
-    .project-title {
-        font-size: 22px;
-    }
-
     .project-tile {
         .img-square {
             width: 300px;
@@ -113,6 +109,14 @@
             width: 300px;
             height: 100%;
             object-fit: cover;
+        }
+
+        .project-title {
+            font-size: 22px;
+        }
+
+        .img-wrapper {
+            padding: 20px 30px;
         }
     }
 }
